Don't complain about inability to copy metadata

related rhbz#1022649

nautilus just takes the view that copying metadata is a "nice to have",
but if it doesn't work it's not a hard error so just do that

https://bugzilla.gnome.org/show_bug.cgi?id=692552