libview/ev-jobs.c
@@ -1574,8 +1574,10 @@ ev_job_save_run (EvJob *job)
 	ev_tmp_uri_unlink (local_uri);
 
         /* Copy the metadata from the original file */
-        if (!error)
-                ev_file_copy_metadata (job_save->document_uri, job_save->uri, &error);
+        if (!error) {
+                /* Ignore errors here. Failure to copy metadata is not a hard error */
+                ev_file_copy_metadata (job_save->document_uri, job_save->uri, NULL);
+        }
 
 	if (error) {
 		ev_job_failed_from_error (job, error);
